fix(style): add overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -36,7 +36,8 @@
 
   &-instructions {
     flex-basis: calc(100% - 10px);
-    width: calc(70% - 10px)
+    width: calc(70% - 10px);
+    overflow: auto;
   }
 }
 
